bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: ';' expected but 'true' found.
  if (estSurMessage():Boolean)==true){
                                ^