bdr.BDR.scala.code
var fini=false
while (fini==false){
  if (estSurMessage():Boolean)==true){
    if ((litMessage():String)=='R'){
      droite();avance()
    } else if ((litMessage():String)=='L'){
      	gauche();avance()
    } else if ((litMessage():String)=='I'){
      	retourne();avance()
    } else if ((litMessage():String)=='A'){
     	 avance()
    } else if ((litMessage():String)=='B'){
      	avance();avance()
    } else if ((litMessage():String)=='C'){
      	avance();avance();avance()
    } else if ((litMessage():String)=='Z'){
      	recule()
    } else if ((litMessage():String)=='Y'){
     	 recule();recule()
    } else if ((litMessage():String)=='X'){
      	recule();recule();recule()
    } else {fini=true}
  } else {fini=true}
}